[tool.poetry]
name = "Mtranscoder"
version = "0.1.1"
description = "script to transcode media"
authors = ["Herbety Paulo"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "3.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
flake8 = "^3.7.9"
pydocstyle = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
