[tool.poetry]
name = "Mtranscoder"
version = "0.3.2"
description = "script to transcode media"
authors = ["Herbety Paulo"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
flake8 = "^3.7.9"
pydocstyle = "^5.0.2"
towncrier = "^19.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.towncrier]
package = "changes"
directory = "changes/"
filename = "CHANGELOG.rst"
title_format = "v{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/Pbezerra-dev/Mtranscoder/issues/{issue}>`_"